tests/dupe-ty-var-type/out.txt
error: redefined identifier: 'a
  ┌─ err.sml:1:11
  │
1 │ type ('a, 'a) foo = int
  │           ^^

typechecking failed
